fix scrollbar aligning

--- a/style.css
+++ b/style.css
@@ -76,13 +76,13 @@
 /* Chrome Safari Opera */
 /* IE and Edge */
 /* Firefox */
-html ::-webkit-scrollbar {
+/* html ::-webkit-scrollbar {
   display: none;
 }
 html {
   -ms-overflow-style: none;
   scrollbar-width: none !important;
-}
+} */
 
 body {
   font-family: "Figtree-Regular", sans-serif;
@@ -290,6 +290,7 @@ nav#nav-categorie.open {
   opacity: 1;
   transition: all 0.3s ease;
   transform: translateX(0%);
+  overflow-x: hidden !important;
   overflow-y: scroll !important;
 }
 
